CSS 2.1 empty-cell handling of the excotic cases, bug 76331, r/sr=roc